syntax = "proto3";

import "protocol.proto";

package atomix.list;

option java_package = "io.atomix.grpc.list";
option java_multiple_files = true;

// List ID
message ListId {
    string name = 1;
    oneof proto {
        protocol.MultiRaftProtocol raft = 2;
        protocol.MultiPrimaryProtocol multi_primary = 3;
        protocol.DistributedLogProtocol log = 4;
    }
}

message AddRequest {
    ListId id = 1;
    repeated bytes values = 2;
}

message AddResponse {
    bool added = 1;
}

message GetRequest {
    ListId id = 1;
    uint32 index = 2;
}

message GetResponse {
    bytes value = 1;
}

message RemoveRequest {
    ListId id = 1;
    repeated bytes values = 2;
}

message RemoveResponse {
    bool removed = 1;
}

message ContainsRequest {
    ListId id = 1;
    repeated bytes values = 2;
}

message ContainsResponse {
    bool contains = 1;
}

message SizeRequest {
    ListId id = 1;
}

message SizeResponse {
    uint32 size = 1;
}

message ClearRequest {
    ListId id = 1;
}

message ClearResponse {
}

// List event
message ListEvent {
    ListId id = 1;
    Type type = 2;
    bytes value = 3;

    // List event type
    enum Type {
        ADDED = 0;
        REMOVED = 1;
    }
}

// List service
service ListService {

    rpc Add(AddRequest) returns (AddResponse) {}

    rpc Get(GetRequest) returns (GetResponse) {}

    rpc Remove(RemoveRequest) returns (RemoveResponse) {}

    rpc Contains(ContainsRequest) returns (ContainsResponse) {}

    rpc Size(SizeRequest) returns (SizeResponse) {}

    rpc Clear(ClearRequest) returns (ClearResponse) {}

    rpc Listen(stream ListId) returns (stream ListEvent) {}

}
